--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,15 @@
 name: flucreator
 description: A sample command-line application for flutter project create with getx
-version: 1.0.3
+version: 2.0.0
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.14.0 <3.0.0'
 
 dependencies:
   process_run: ^0.12.2+2
+  change_case: ^1.0.1
+  code_builder: ^4.1.0
+  dart_style: ^2.2.1
 
 executables:
   flucreator: flucreator
