--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
 name: flucreator
 description: A sample command-line application for flutter project create with getx
 version: 2.0.6
+homepage: https://github.com/Abdusin/Flucreator
+repository: https://github.com/Abdusin/Flucreator
 
 environment:
   sdk: '>=2.14.0 <3.0.0'
